--- a/KeryxPars.MessageViewer/KeryxPars.MessageViewer.Client/wwwroot/index.html
+++ b/KeryxPars.MessageViewer/KeryxPars.MessageViewer.Client/wwwroot/index.html
@@ -12,6 +12,21 @@
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="KeryxPars.MessageViewer.Client.styles.css" rel="stylesheet" />
+    
+    <!-- GitHub Pages SPA redirect handling -->
+    <script type="text/javascript">
+        (function(l) {
+            if (l.search[1] === '/' ) {
+                var decoded = l.search.slice(1).split('&').map(function(s) { 
+                    return s.replace(/~and~/g, '&')
+                }).join('?');
+                window.history.replaceState(null, null,
+                    l.pathname.slice(0, -1) + decoded + l.hash
+                );
+            }
+        }(window.location))
+    </script>
+    
     <script type="importmap"></script>
 </head>
 
@@ -33,3 +48,4 @@
 </body>
 
 </html>
+
