added validation support

--- a/KeryxPars.MessageViewer/KeryxPars.MessageViewer.Client/wwwroot/index.html
+++ b/KeryxPars.MessageViewer/KeryxPars.MessageViewer.Client/wwwroot/index.html
@@ -20,8 +20,9 @@
     <!-- Stylesheets -->
     <link rel="preload" id="webassembly" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="css/validation.css" />
     <link href="KeryxPars.MessageViewer.Client.styles.css" rel="stylesheet" />
     
     <!-- GitHub Pages SPA redirect handling -->
